[package]
name = "decode_raw"
description = "A protobuf debugging tool – `protoc --decode_raw` on steroids."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/confio/decode_raw"
exclude = [
  "docs/",
  ".*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Example of customizing binaries in Cargo.toml.
[[bin]]
name = "decode_raw"

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
protofish = "0.5.2"
ansi_term = "0.12"
hex = "0.4"
snailquote = "0.3"
